2010-05-05  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-bound-operation): new struct
	(soap-binding): rename soap-actions to operations
	(soap-l2wsdl): new function
	(soap-resolve-references-for-operation): if no parameter-order is
	specified, construct a default one.
	(soap-resolve-references-for-binding): resolve references in
	bound-operations
	(soap-parse-message): recognize the 'element attribute
	(soap-parse-binding): extract the soap-action and use for every
	operation in this binding.
	(soap-parse-envelope, soap-parse-response, soap-encode-body)
	(soap-create-envelope, soap-invoke): handle literal vs encoded
	bodies
	(soap-parse-response): corrected message check
	(soap-invoke): increased buffer limit for issuing warning

2010-05-04  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-namespace-put, soap-namespace-put-link)
	(soap-namespace-get): namespaces can now store multiple elements
	with the same name.
	(soap-wsdl-add-namespace, soap-wsdl-resolve-references): handle
	multiple elements with the same name.
	(soap-resolve-references-for-binding): request only port type
	elements.
	(soap-resolve-references-for-port): request only binding type
	elements.
	(soap-parse-complex-type): look for a name in an attribute tag
	(soap-wsdl-get): use a PREDICATE argument to specify the type of
	element requested. All callers updated.
	(soap-parse-sequence): accept elements that have inline
	complexType definitions.
	(soap-default-xsd-types): use the
	"http://www.w3.org/2001/XMLSchema" as XMLSchema.
	(soap-parse-schema): parse toplevel element tags
	(soap-parse-schema-element): new function
	(soap-parse-complex-type): handle empty complex types
	(soap-parse-sequence): make an element nillable if its minOccurs
	is 0
	(soap-binding): add a soap-actions member
	(soap-parse-sequence): an element with 0 minOccurs is nillable
	(soap-parse-binding): new function

2010-04-30  Alex Harsanyi  <AlexHarsanyi@gmail.com>
