@@ -1,3 +1,13 @@
+2010-05-06  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* soap-client.el (soap-encode-basic-type): encode an emacs style
+	time value such as received by (current-time) into the xsd format.
+	(soap-encode-body): when encoding literal documents, make the
+	toplevel tags unqualified and add their namespace to the tag
+	itself
+	(soap-encode-body): add the "soapenc:encodingStyle" attribute only
+	for encoded documents.
+
 2010-05-05  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* soap-client.el (soap-bound-operation): new struct
